# roslyn_wrapper

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PROGRESS_FINDINGS.md  README.md  build.ps1  build.sh  clippy.toml  test_progress.py
.github/workflows/: release.yml
src/: download.rs  logger.rs  main.rs  path_utils.rs
