[package]
name = "roslyn-wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "roslyn-wrapper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
walkdir = "2.4"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
